# tree-sitter-typescript

./: .gitattributes  .gitignore  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  debug1.ts  debug2.ts  go.mod  go.sum  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter-typescript.wasm  tree-sitter.json  typescript.cabal
.github/workflows/: build.yml  ci.yml  fuzz.yml  lint.yml
bindings/c/: tree-sitter-tsx.h  tree-sitter-tsx.pc.in  tree-sitter-typescript.h  tree-sitter-typescript.pc.in
bindings/go/: binding.go  binding_test.go  go.mod  tsx.go  typescript.go
bindings/node/: binding.cc  binding_test.js  gts.js  index.d.ts  index.js  tsx.js  typescript.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_typescript/: __init__.py  __init__.pyi  binding.c  test.py
bindings/rust/: README.md  build.rs  lib.rs
bindings/swift/TreeSitterTypeScriptTests/: TreeSitterTypeScriptTests.swift
bindings/swift/tsx/TreeSitterTSX/: tsx.h
bindings/swift/typescript/TreeSitterTypeScript/: typescript.h
common/: common.mak  define-grammar.js  scanner.h
common/corpus/: declarations.txt  expressions.txt  functions.txt  types.txt
corpus/: declarations.txt  functions.txt  types.txt
gts/: Makefile  grammar.js  package.json
gts/src/: grammar.json  scanner.c
queries/: builtins.ts  highlights.scm  stack-graphs.tsg  tags.scm
script/: known-failures.txt  parse-examples
src/: grammar.json
test/corpus/: declarations.txt  expressions.txt  types.txt
tsx/: CMakeLists.txt  Makefile  package.json  tree-sitter-tsx.wasm
tsx/corpus/: expressions.txt
tsx/src/: grammar.json  node-types.json
typescript/: CMakeLists.txt  Makefile  package.json  tree-sitter-typescript.wasm
typescript/src/: grammar.json  highlights.json  node-types.json
typescript/test/stack-graphs/builtins/: async-function-inferred-return-type-not-directly-accessible.ts.skip  async-method-with-inferred-return-type.ts  await-async-function-with-inferred-return-type.ts  await-function-with-explicit-return-type.ts  await-variable.ts  builtin-Array-type.ts  builtin-Map-type.ts  builtin-Set-type.ts
typescript/test/stack-graphs/expressions/: index-into-array.ts
typescript/test/stack-graphs/modules/: import-default-enum-reference-type-and-expression.ts  import-default-interface.ts  import-default-type.ts  import-exports-object.ts  import-exports-of-indirect-class.ts.skip  import-from-subdirectory.ts  import-from-superdirectory.ts  import-via-superdirectory.ts  refer-to-type-in-nested-namespace-from-qualified-namespace.ts.skip  (+3 more)
(+21 files in other folders)
