[package]
name = "tree-sitter-typescript"
description = "TypeScript and TSX grammars for tree-sitter"
version = "0.21.2"
authors = [
  "Max Brunsfeld <maxbrunsfeld@gmail.com>",
  "Amaan Qureshi <amaanq12@gmail.com>",
]
license = "MIT"
keywords = ["incremental", "parsing", "tree-sitter", "typescript", "tsx"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/tree-sitter/tree-sitter-typescript"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "common",
  "bindings/rust",
  "typescript/grammar.js",
  "typescript/src",
  "tsx/grammar.js",
  "tsx/src",
  "queries",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = ">=0.21.0"

[build-dependencies]
cc = "1.0.104"
