[package]
name = "tree-sitter-typescript"
description = "TypeScript and TSX grammars for tree-sitter"
version = "0.23.2"
authors = [
  "Max Brunsfeld <maxbrunsfeld@gmail.com>",
  "Amaan Qureshi <amaanq12@gmail.com>",
]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "typescript", "tsx"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/tree-sitter/tree-sitter-typescript"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "common",
  "bindings/rust",
  "typescript/grammar.js",
  "typescript/src",
  "tsx/grammar.js",
  "tsx/src",
  "queries/*",
  "./tree-sitter.json",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.1"

[dev-dependencies]
tree-sitter = "0.24"
